--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "3.2.25",
   "description": "Tomorrow's ECMAScript modules today!",
   "keywords": "commonjs, ecmascript, export, import, modules, node, require",
-  "repository": "standard-things/esm",
+  "repository": "irls/esm",
   "license": "MIT",
-  "author": "John-David Dalton <john.david.dalton@gmail.com>",
+  "author": "irls",
   "main": "esm.js",
   "private": true,
   "runkitExample": "require = require(\"esm\")(module)\nrequire(\"lodash-es\")",
